2001-04-19  Bruno Haible  <haible@clisp.cons.org>

	* gettext-0.10.37 released.

2001-04-17  Bruno Haible  <haible@clisp.cons.org>

	* mbswidth.m4: Also include <string.h>; this is where AIX 3.2.5
	declares wcwidth.

2001-04-12  Bruno Haible  <haible@clisp.cons.org>

	* gettext.m4: Workaround an automake-1.4 bug: Don't write
	AM_DISABLE_SHARED, even in comments, because that causes 'aclocal'
	to pull in the libtool.m4 macros, which causes 'automake' to use
	@LIBTOOL@ in its rules, even for packages that haven't called
	AM_PROG_LIBTOOL.

2001-04-12  Bruno Haible  <haible@clisp.cons.org>

	* gettext.m4 (AM_WITH_NLS): Fix syntax error in 'case'. Change
	whitespace in $CONFIG_FILES to spaces for matching with 'case'.
	Reported by Thorsten Kukuk <kukuk@suse.de>.

2001-04-11  Bruno Haible  <haible@clisp.cons.org>

	* gettext.m4 (AM_WITH_NLS): Even if 'msgfmt' is not found in $PATH,
	set CATOBJEXT=.gmo and use the gettext in libc or libintl.

2001-04-04  Bruno Haible  <haible@clisp.cons.org>

	* mbswidth.m4: New file, from textutils-2.0.13 with modifications.
	* mbrtowc.m4: Likewise.
	* mbstate_t.m4: Likewise.
	* Makefile.am (EXTRA_DIST): Add them.

2001-03-29  Bruno Haible  <haible@clisp.cons.org>

	* gettext-0.10.36 released.

2001-03-23  Bruno Haible  <haible@clisp.cons.org>

	* gettext.m4 (AM_WITH_NLS): Check for bison and set INTLBISON.

2001-03-20  Bruno Haible  <haible@clisp.cons.org>

	* iconv.m4 (AM_ICONV): Recommend GNU libiconv.

2001-03-16  Bruno Haible  <haible@clisp.cons.org>

	* gettext.m4 (AM_WITH_NLS): Allow po/Makefile.in to be generated from
	a different file than po/Makefile.in.in.

2001-03-11  Bruno Haible  <haible@clisp.cons.org>

	* getline.m4: New file, from fileutils-4.0.41 with modifications.
	* Makefile.am (EXTRA_DIST): Add it.

2001-03-11  Bruno Haible  <haible@clisp.cons.org>

	* gettext.m4 (AM_WITH_NLS): Accept a second argument 'need-ngettext'.
	If it is given, check for the presence of ngettext() as well.
